Criada a página de maneira estática referente ao dashboard da administração (sem informações ainda).

--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/indexAdmin.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/indexAdmin.html.twig
@@ -1,1 +1,16 @@
-indexAdmin.html.twig
+{% extends 'CekurteGeneratorBundle::layout.html.twig' %}
+
+{% set title    = 'Dashboard'|trans %}
+{% set subtitle = 'Welcome'|trans %}
+
+{% block search -%}
+{% endblock %}
+
+{% block links -%}
+{% endblock %}
+
+{% block links_footer -%}
+{% endblock %}
+
+{% block content -%}
+{% endblock %}
