Concluída a página de novos registros a inserção de novas respostas ficou de maneira bem facilidata, sendo que sua formatação é diferente dependendo do tipo de questão selecionada.

--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
@@ -34,144 +34,14 @@
         </div>
         {% include 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
     </form>
-
 {% endblock %}
 
 {%- block stylesheets -%}
     {{ parent() }}
-    <style>
-        div.input-group-option:last-child span.input-group-addon-remove{
-            display: none;
-        }
-
-        div.input-group-option:last-child input.form-control{
-            border-bottom-right-radius: 3px;
-            border-top-right-radius: 3px;
-        }
-
-        div.input-group-option span.input-group-addon-remove{
-            cursor: pointer;
-        }
-
-        div.input-group-option{
-            margin-bottom: 3px;
-        }
-    </style>
+    <link href="{{ asset('bundles/cekurtezcpe/css/question-and-answer.css') }}" rel="stylesheet"/>
 {%- endblock -%}
-
 
 {%- block javascripts -%}
     {{ parent() }}
-    <script type="text/javascript">
-        jQuery(document).ready(function($) {
-
-            $(document).on('focus', 'div.form-group-options div.input-group-option:last-child input[type="text"]', function() {
-
-                // <div class="input-group input-group-option col-lg-12">
-                //     <span class="input-group-addon">
-                //         <input type="checkbox" class="correct_answers" name="correct_answers[]" value="1">
-                //     </span>
-                //     <input type="text" name="option_answers[]" class="form-control" placeholder="{{ 'New answer'|trans }}">
-                //     <span class="input-group-addon input-group-addon-remove">
-                //         <span class="glyphicon glyphicon-remove"></span>
-                //     </span>
-                // </div>
-
-
-                // var questionType    = $('#cekurte_zcpebundle_questionform_questionType').val();
-
-                // if (!questionType.length > 0) {
-                //     alert('Selecione um tipo de pergunta!');
-                //     $('#cekurte_zcpebundle_questionform_questionType').trigger('focus');
-                // }
-
-                var currentValue    = parseInt($(this).parent().find('input.correct_answers').attr('value'));
-                var index           = currentValue + 1;
-
-                var container = $('<div>')
-                    .addClass('input-group')
-                    .addClass('input-group-option')
-                    .addClass('col-lg-12')
-                ;
-
-                var checkOrRadioContainer = $('<span>')
-                    .addClass('input-group-addon')
-                ;
-
-                var checkOrRadio = $('<input>')
-                    .addClass('correct_answers')
-                    .attr('tabindex',   '-1')
-                    .attr('type',       'checkbox')
-                    .attr('name',       'correct_answers[]')
-                    .attr('value',      index)
-                ;
-
-                var input = $('<input>')
-                    .addClass('form-control')
-                    .attr('type',       'text')
-                    .attr('name',       'option_answers[' + index + ']')
-                    .attr('placeholder',"{{ 'New answer'|trans }}")
-                ;
-
-                var removeContainer = $('<span>')
-                    .addClass('input-group-addon')
-                    .addClass('input-group-addon-remove')
-                ;
-
-                var remove = $('<span>')
-                    .addClass('glyphicon')
-                    .addClass('glyphicon-remove')
-                ;
-
-                container
-                    .append(
-                        checkOrRadioContainer.append(checkOrRadio)
-                    )
-                    .append(
-                        input
-                    )
-                    .append(
-                        removeContainer.append(remove)
-                    )
-                ;
-
-                $(this).parent().parent().append(container);
-            });
-
-            $(document).on('click', 'div.form-group-options .input-group-addon-remove', function() {
-                $(this).parent().remove();
-            });
-
-            $(document).on('change', '#cekurte_zcpebundle_questionform_questionType', function() {
-
-                var questionType = $(this).val();
-
-                $(document).find('.correct_answers').each(function(index, element) {
-
-                    var checkOrRadio = $('<input>')
-                        .addClass('correct_answers')
-                        .attr('tabindex',   '-1')
-                        .attr('type',       'checkbox')
-                        .attr('name',       'correct_answers[]')
-                        .attr('value',      $(element).attr('value'))
-                    ;
-
-                    if (questionType == 1) {
-
-                        $(checkOrRadio).attr('type', 'radio');
-
-
-                    } else if (questionType == 3) {
-
-                        $(checkOrRadio).attr('checked', 'checked');
-
-                    }
-
-                    $(element).parent().append(checkOrRadio);
-
-                    $(element).remove();
-                });
-            });
-        });
-    </script>
+    <script src="{{ asset('bundles/cekurtezcpe/js/question-and-answer.js') }}"></script>
 {%- endblock -%}
