--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
@@ -41,8 +41,12 @@
             {% for entity in pagination %}
                 <tr>
                     <td><a href="{{ path('admin_question_show', { 'id': entity.id }) }}">{{ entity.questionType }}</a></td>
-                    <td>{{ entity.category }}</td>
-                    <td>{{ entity.title }}</td>
+                    <td>
+                        {% for category in entity.category %}
+                            {{ category }}{% if not loop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td>{{ entity.title|truncate(50)|raw }}</td>
                     {% if cekurte_is_granted('RETRIEVE') or cekurte_is_granted('UPDATE') or cekurte_is_granted('DELETE') %}
                         <td>
                             {% embed 'CekurteGeneratorBundle:Action:retrieve.html.twig' with {
