--- a/src/Cekurte/ZCPEBundle/Resources/views/email.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/email.html.twig
@@ -1,1 +1,35 @@
-Email template
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Cekurte ZCPE</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+<body style="margin:0; padding:0; background-color: #313131;">
+  <table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
+    <tr>
+        <td colspan="3" style="font-family: Arial; font-size: 14px; color: #fff; padding: 20px 0 20px 0; background:#8892BF; border-color: #4F5B93; border-style: solid; border-width: 3px 0px 1px 0px; text-align: center">
+        [Rumo a ZCE] Pergunta do dia: 1
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3" style="font-family: Arial; font-size: 14px; color: #000; padding: 20px 0 20px 0;">
+            <h1>{{ question.title|raw }}</h1>
+            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                {% for item in question.questionHasAnswer %}
+                    <tr>
+                        <td style="font-family: Arial; font-size: 14px; color: #000; padding: 20px 0 20px 0; text-align: justify;">
+                        {{ item.answer.title }}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3" style="font-family: Arial; font-size: 14px; color: #fff; padding: 20px 0 20px 0; background:#8892BF; border-color: #4F5B93; border-style: solid; border-width: 1px 0px 3px 0px; text-align: center">
+        @ZCPE 2014
+        </td>
+    </tr>
+  </table>
+</body>
+</html>
