--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
@@ -16,7 +16,7 @@
 
         <div id="answer-message" class="alert alert-danger alert-dismissable fade">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            <span class="message"></span>
+            <strong>{{ 'Error'|trans }}!</strong> <span class="message">{{ 'Select correct answer.'|trans }}</span>
         </div>
 
         <div class="form-group">
