--- a/src/Cekurte/ZCPEBundle/Resources/views/Category/show.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Category/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'CekurteGeneratorBundle::layout.html.twig' %}
+{% extends 'CekurteZCPEBundle::layout-menu-question.html.twig' %}
 
 {% set title    = 'Category'|trans %}
 {% set subtitle = 'Details'|trans %}
