--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'CekurteZCPEBundle:Question:layout.html.twig' %}
+{% extends 'CekurteZCPEBundle::layout-menu-question.html.twig' %}
 
 {% set title    = 'Question'|trans %}
 {% set subtitle = 'List'|trans %}
