--- a/src/Cekurte/ZCPEBundle/Resources/views/Tag/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Tag/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'CekurteGeneratorBundle::layout.html.twig' %}
+{% extends 'CekurteZCPEBundle::layout-menu-question.html.twig' %}
 
 {% set title    = 'Tag'|trans %}
 {% set subtitle = 'List'|trans %}
