--- a/src/Cekurte/ZCPEBundle/Resources/views/Tag/new.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Tag/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'CekurteGeneratorBundle::layout.html.twig' %}
+{% extends 'CekurteZCPEBundle::layout-menu-question.html.twig' %}
 
 {% set title    = 'Tag'|trans %}
 {% set subtitle = 'Add'|trans %}
@@ -15,10 +15,10 @@
         {{ form_widget(form) }}
         {% include 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
     </form>
-                                        
+
 {% endblock %}
 
 {%- block javascripts -%}
     {{ parent() }}
-                                        
+
 {%- endblock -%}
